--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,11 +92,35 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body,html{
+	width:100%;
+	height:100%;
+}
 
-
-
-
-
+/*
+ *	pages_view
+ */
+#content_wrapper{
+	position:absolute;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	background-image:url(../img/default_background.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	z-index:1;
+	color:#ffffff;
+}
+#page_info_form_wrap{
+	width:300px;
+	position:absolute;
+	left:30px;
+	top:120px;
+	z-index:2;
+}
 
 
 
