--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,14 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+	background-image:url(../img/default_background.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	z-index:1;
+	color:#cccccc;
+	padding: 1em;
 }
 
 /*
@@ -106,13 +114,6 @@ body,html{
 	top:0px;
 	width:100%;
 	height:100%;
-	background-image:url(../img/default_background.jpg);
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	z-index:1;
-	color:#ffffff;
 }
 #page_info_form_wrap{
 	width:300px;
