creates extra div with text that scales the fontsize when the div resizes
All the temporary code has been put at the end of the files to be
implemented into the normal divs when there is time.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,3 +361,5 @@ body,html{
         page-break-after: avoid;
     }
 }
+
+#resizable { width: 150px; height: 150px; font-size: 1em; overflow: visible}
