--- a/public/css/main.css
+++ b/public/css/main.css
@@ -121,55 +121,19 @@ body,html{
 	top:120px;
 	z-index:2;
 }
-/*
- *	CSS TABS -> http://css-tricks.com/functional-css-tabs-revisited/
- */
-.tabs {
-  position: relative;   
-  min-height: 200px; /* This part sucks */
-  clear: both;
-  margin: 25px 0;
+#add_content_form{
+	width:400px;
 }
-.tab {
-  float: left;
+#content_file_info{
+	text-align:center;
+	width:100%;
+	height:140px;
 }
-.tab label {
-  background: #eee; 
-  padding: 10px; 
-  border: 1px solid #ccc; 
-  margin-left: -1px; 
-  position: relative;
-  left: 1px; 
+textarea#content_text{
+	width:95%;
+	margin:auto;
+	height:100px;
 }
-.tab [type=radio] {
-  display: none;   
-}
-.content {
-  position: absolute;
-  top: 28px;
-  left: 0;
-  background: white;
-  right: 0;
-  bottom: 0;
-  padding: 20px;
-  border: 1px solid #ccc; 
-}
-[type=radio]:checked ~ label {
-  background: white;
-  border-bottom: 1px solid white;
-  z-index: 2;
-}
-[type=radio]:checked ~ label ~ .content {
-  z-index: 1;
-}
-
-
-
-
-
-
-
-
 
 
 
@@ -203,6 +167,13 @@ body,html{
 .hidden {
     display: none !important;
     visibility: hidden;
+    -webkit-user-select: none; /* Chrome/Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+
+	/* Rules below not implemented in browsers yet */
+	-o-user-select: none;
+	user-select: none;
 }
 
 /*
