--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,7 +129,7 @@ body,html{
 	width:100%;
 	height:140px;
 }
-textarea#content_text{
+textarea#content_description{
 	width:95%;
 	margin:auto;
 	height:100px;
