--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,7 @@ body,html{
 /*
  *	pages_view
  */
-#content_wrapper{
+#element_wrapper{
 	position:absolute;
 	left:0px;
 	top:0px;
@@ -121,20 +121,20 @@ body,html{
 	top:120px;
 	z-index:2;
 }
-#add_content_form{
+#add_element_form{
 	width:400px;
 }
-#content_file_info{
+#element_file_info{
 	text-align:center;
 	width:100%;
 	height:140px;
 }
-textarea#content_description{
+textarea#element_description{
 	width:95%;
 	margin:auto;
 	height:100px;
 }
-.content_box{
+.element_box{
 	padding:10px;
 	position:absolute;	
 }
@@ -158,7 +158,7 @@ textarea#content_description{
 }
 
 .ir:before {
-    content: "";
+    element: "";
     display: block;
     width: 0;
     height: 100%;
@@ -232,7 +232,7 @@ textarea#content_description{
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
+    element: " "; /* 1 */
     display: table; /* 2 */
 }
 
@@ -283,11 +283,11 @@ textarea#content_description{
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        element: " (" attr(href) ")";
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        element: " (" attr(title) ")";
     }
 
     /*
@@ -297,7 +297,7 @@ textarea#content_description{
     .ir a:after,
     a[href^="javascript:"]:after,
     a[href^="#"]:after {
-        content: "";
+        element: "";
     }
 
     pre,
