--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,19 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+	position:absolute;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	background-image:url(../img/default_background.jpg);
+	background-color:#000033;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	z-index:1;
+	color:#cccccc;
 }
 
 /*
