--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,19 +114,18 @@ body,html{
 /*
  *	pages_view
  */
-#element_wrapper{
+#background{
 	position:absolute;
 	left:0px;
 	top:0px;
 	width:100%;
 	height:100%;
-	background-image:url(../img/default_background.jpg);
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
 	z-index:1;
 	color:#ffffff;
+}
+.element{
+	position:absolute;
+	font-size:15px;
 }
 #page_info_form_wrap{
 	width:300px;
