--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,14 +26,15 @@ body {
 	top:0px;
 	width:100%;
 	height:100%;
-	background-image:url(../img/default_background.jpg);
+	/*background-image:url(../img/default_background.jpg);*/
+	background-image:url(../img/white.gif);
 	background-color:#000033;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 	z-index:1;
-	color:#cccccc;
+	color:#666;
 	padding:2em;
 }
 
@@ -131,7 +132,7 @@ body,html{
 	width:300px;
 	position:absolute;
 	left:30px;
-	top:120px;
+	top:30px;
 	z-index:2;
 }
 #add_element_form{
